# wayvk

./: .gitignore  Cargo.toml  LICENSE  build.rs  build.sh  frag.spv  readme.md  wayvk.c  wayvk.config
protocol/: compositor-discovery.toml  linux-dmabuf-unstable-v1.toml  notification.toml  wayland.toml  xdg-shell.toml
shader/: basic.frag  basic.vert
src/: error.rs  font.h  font.rs  graphics.rs  lib.rs  main.rs  session.c  session.h  term.c  term.h  util.c  util.h  vk.c  vk.h  vulkan.rs  wayland.rs  wayvk.c  wl.c  wl.h  xdg_shell.rs
src/graphics/: vulkan.rs
src/graphics/vulkan/: window.rs
src/protocol/: readme.md
src/session/: error.c  error.h  readme.md  session.c  session.h  term.c  term.h  wl.c  wl.h
src/shader/: window.hlsl
src/wayland/: mod.rs  wl.rs  xdg.rs
src/wayland/proto/: linux_dmabuf_unstable_v1.rs  mod.rs  wayland.rs  xdg_shell.rs
src/wl/: proto.h  xdg_wm_base.c  xdg_wm_base.h
