[package]
name = "wayvk"
version = "0.0.1"
edition = "2021"

[dependencies]
config = { git = "https://github.com/AidoP/config" }
drm = { path = "../dri" }
ash = { git = "https://github.com/ash-rs/ash", default-features = false, features = ["linked", "debug"]}
gpu-allocator = { version = "0.15.1", default-features = false, features = ["vulkan"] }
syslib = { path = "../syslib" }
wl = { path = "../wl" }
wl-wayland = { path = "../wl-wayland", features = ["unsealed_shm"] }
#wl = { git = "https://github.com/AidoP/wl" }
#wl-wayland = { git = "https://github.com/AidoP/wl-wayland", features = ["unsealed_shm"] }

[build-dependencies]
shaderc = "0.7.4"